--- a/package.json
+++ b/package.json
@@ -3,6 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    
+    "mokinys": "node --watch ./js-nd/7-mokinys.js",
+    "array": "node --watch ./js-nd/6-array.js",
+    "if": "node --watch ./js-nd/5-if.js",
+    "boolean": "node --watch ./js-nd/4-boolean.js",
+    "function": "node --watch ./js-nd/3-function.js",
+    "string": "node --watch ./js-nd/2-string.js",
+    "number": "node --watch ./js-nd/1-number.js",
+    "js": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
